Fix strange wrapping when width was 364

--- a/assets/site.css
+++ b/assets/site.css
@@ -140,7 +140,7 @@ blockquote:hover {
 }
 
 .top-bar {
-  padding-bottom: 5%;
+  padding-bottom: 2em;
 }
 
 .top-bar-element {
